# rover1

./: .env.example  .gitignore  99-ublox-gnss.rules  LICENSE  LOOP_OF_DEATH_RECOVERY.md  Meckman_UX_Design_Standard_V4.md  NTRIP_Credentials.md  README.md  SSH_Login.md  Software_Stack.md  bug_log.md  engineering_log.md  github_repo.md  imu_calibration_tool.py  launch_gps.sh  launch_rover.sh  map_encoders.py  mentor_advice.md  monitor_registers.py  motor_mapping.md  phase2_todo.md  probe_encoders.py  probe_motors.py  product_brief.md  project_plan.md  setup_on_pi.sh  test_plan.md  verify_encoders.py
Camera_Specs/: Read_me_first_Camera_Specs.md
Camera_Specs/ascam_ros2_ws/src/ascamera/: package.xml
docs/: ENGINEERING_LOG_GNSS_DEBUGGING.md  STADIA_CONTROLLER_AUTOCONNECT.md
gnss_health_monitor/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
gnss_health_monitor/gnss_health_monitor/: __init__.py  gnss_health_monitor_node.py
gnss_health_monitor/launch/: gnss_health_monitor.launch.py
gnss_health_monitor/msg/: GnssHealth.msg
gnss_web_dashboard/: package.xml  setup.py
gnss_web_dashboard/gnss_web_dashboard/: __init__.py  web_dashboard.py
gnss_web_dashboard/scripts/: gnss_web_dashboard
gnss_web_dashboard/static/: index.html
rover1_bringup/: package.xml  setup.py
rover1_bringup/config/: ekf.yaml  ekf_global.yaml  navsat.yaml
rover1_bringup/launch/: gps.launch.py  rover.launch.py
rover1_description/: package.xml  setup.cfg  setup.py
rover1_description/urdf/: rover.urdf.xacro
rover1_hardware/: package.xml  setup.cfg  setup.py
rover1_hardware/rover1_hardware/: battery_monitor.py  berry_imu_driver.py  fix_to_nmea.py  hiwonder_driver.py  mecanum_kinematics.py  stadia_teleop.py
scripts/: auto_update.sh  calibrate_odometry.py  connect_stadia_controller.sh  debug_nodes.sh  enable_auto_update.sh  install_stadia_service.sh  load_env.sh  rover1-updater.service  rover1-updater.timer  rover1.service  rover_interactive_check.py  rover_monitor.sh  setup_ethernet_tether.sh  setup_network_failover.sh  setup_rover.sh  startup_launch.sh
systemd/: stadia-controller.service
