<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gnss_web_dashboard</name>
  <version>1.0.0</version>
  <description>Simple web dashboard for GNSS health monitoring</description>
  
  <maintainer email="rover1@example.com">Rover1 Project</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_python</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>gnss_health_monitor</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>