<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover1_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configuration for Rover1</description>
  <maintainer email="andrew@example.com">Andrew Meckley</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rover1_hardware</depend>
  <depend>rover1_control</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
