<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover1_bringup</name>
  <version>0.0.1</version>
  <description>Launch files and configuration for Rover1</description>
  <maintainer email="andrew@example.com">Andrew Meckley</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rover1_hardware</depend>
  <depend>rover1_control</depend>
  
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ublox_dgnss</exec_depend>
  <exec_depend>ntrip_client</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rover1_description</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
