<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover1_description</name>
  <version>0.0.1</version>
  <description>URDF Description for Rover1</description>
  <maintainer email="andrew@example.com">Andrew Meckley</maintainer>
  <license>MIT</license>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
